src/objects/loan__Loan_Loss_Provisioning_Setup__c.object
<CustomObject>
    <fields>
        <fullName>loan__Class__c</fullName>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>On Time Loans</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Loans Overdue For &lt; 30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans Overdue Between 31-60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans Overdue Between 61-90 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans Overdue Between 91-180 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans Overdue Between 181-365 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans Overdue For Above 365 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Product__c</fullName>
        <label>Loan Product</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipLabel>Loan Loss Provisioning Setup</relationshipLabel>
        <relationshipName>Loan_Loss_Provisioning_Setup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Provision_Percentage__c</fullName>
        <label>Provision Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Loan Loss Provisioning Setup</label>
    <nameField>
        <displayFormat>LLPSID-{0000000000}</displayFormat>
        <label>Loan Loss Provisioning Setup ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Loss Provisioning Setup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>